Updated Customer and Mechanic Update to prevent Password changes for Test Accounts. Delete Mechanic and Delete Customer have been updated to allow Admins to delete any accounts and Mechanics or Customers to only be able to delete their own accounts.
